# MaskGen

./: .gitignore  .gitmodules  README.md
docs/: bridged_convex_partition.md  commands.md  data.md  experiments.md  explainer_design_plan.md  generator_io_spec.md  generator_training.md  global_approx_partition.md  global_arc_regularization.md  manual_rule_explainer.md  manual_target_compression.md  manual_target_split_generation.md  operation_explainer.md  pipeline.md  python_scripts.md  weak_explainer.md
partition_gen/: __init__.py  ar_dataset.py  boundary_dataset.py  boundary_training.py  bridged_convex_partition.py  cdt_partition.py  convex_partition.py  dual_graph.py  explainer.py  explanation_evidence.py  geometry_approximator.py  geometry_dataset.py  geometry_render.py  geometry_training.py  global_approx_partition.py  global_arc_regularizer.py  joint_render.py  latent_geometry.py  manual_ar_training.py  manual_coarse_scene_ar.py  manual_geometry_conditioned_evaluation.py  manual_geometry_conditioning.py  manual_geometry_constrained_sampling.py  manual_geometry_evaluation.py  manual_geometry_oracle_frame_conditioning.py  manual_geometry_sample_validation.py  manual_geometry_shape_fallback.py  manual_layout_ar.py  manual_layout_frame.py  manual_layout_residual.py  manual_layout_retrieval.py  manual_parse_graph_relation_spatial_audit.py  manual_parse_graph_spatial_audit.py  manual_parse_graph_target_audit.py  manual_parse_graph_visualization.py  manual_relative_layout_ar.py  manual_rule_explainer.py  (+36 more)
tools/: CMakeLists.txt  optimal_convex_partition_cli.cpp
(+180 files in other folders)
